--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: '3.7'
 services:
-  app:
-    build: .
-    ports:
-      - "5050:8008"
-    depends_on:
-      - db
+  # app:
+  #   build: .
+  #   ports:
+  #     - "5050:8008"
+  #   depends_on:
+  #     - db
   db:
     image: kartoza/postgis
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_PASSWORD: sbtemplate
       POSTGRES_USER: sbtemplate
